fix(AboutPage): fix social hero on mobile

--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -31,3 +31,30 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .social {
+    &__wrapper {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      margin-bottom: 160px;
+      width: 100%;
+    }
+
+    &__hero {
+      width: 100%;
+      height: 200px;
+      margin: 6px 0;
+
+      &-img {
+        height: 100%;
+      }
+
+      &-logo {
+        max-width: 170px;
+        margin: auto;
+      }
+    }
+  }
+}
